--- a/app/src/main/res/layout/grid_cell.xml
+++ b/app/src/main/res/layout/grid_cell.xml
@@ -2,13 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/geoImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="209dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/geoimageview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
